--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
         <title>jQuery</title>
-          <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
           <link href="jquery-ui/jquery-ui.css" rel="stylesheet">
 
